Fix modal sizing on mobile

--- a/src/components/Play/PlayMenu.scss
+++ b/src/components/Play/PlayMenu.scss
@@ -42,14 +42,11 @@
 }
 
 @media screen and (max-width: 750px) {
-	.PlayMenuWrapper {
-		top: auto;
-		bottom: 10px;
-	}
-
 	.PlayMenu {
 		flex-direction: row;	
 		max-width: 100%;
+		top: auto;
+		bottom: 10px;
 		.Button {
 			font-size: 18px;
 			padding: 14px 16px;
