--- a/src/components/common/Modal.scss
+++ b/src/components/common/Modal.scss
@@ -51,3 +51,20 @@
 		}
 	}
 }
+
+
+@media screen and (max-width: 565px) {
+	.Modal {
+		min-height: 0;
+		padding: 40px 30px;
+		min-width: 90vw;
+		h1 {
+			font-size: 2.5rem;
+		}
+		p {
+			font-size: 1rem;
+			margin-bottom: 35px;
+			margin-top: 15px;
+		}
+	}
+}
